employ another attempt to fix the z-index/sticky issue in safari

--- a/src/_scss/chunks/_main.scss
+++ b/src/_scss/chunks/_main.scss
@@ -456,6 +456,7 @@
                 position: relative;
                 z-index: 2;
                 margin-block-start: 0;
+                -webkit-transform: translate3d(0,0,0); // this is needed exclusively for safari. This forces a new layer, setting the z-index from the very start. Without it, the z-index only applies once the "sticky" part comes in, which on safari is being updated after the scroll was finished, not while it is happening.
 
                 @include _mainContentElements();
 
